--- a/index.html
+++ b/index.html
@@ -12,5 +12,13 @@
     <p>ele veio falar comigo,e viramos amigos</p>
     <p>eu comecei a gostar dele e começamos namorar</p>
     <p>ele é muito estranho mas ele me faz rir a maior parte do tempo e eu amo ele por isso</p>
+
+    <div class="conteudo">
+        <div class="esquerda">
+         <img src=""alt"">
+        </div>
+        <direita></direita>
+    
+        </div>
 </body>
 </html>
